--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -1158,7 +1158,7 @@
                                         </ng-template>
                                         <!-- </div> -->
                                     </ngb-panel>
-                                    <ngb-panel id="loyalty-info">
+                                    <!-- <ngb-panel id="loyalty-info">
                                         <ng-template ngbPanelTitle>
                                             <div class="heading-step1">
                                                 <h4>Loyalty points</h4>
@@ -1174,7 +1174,7 @@
                                             </div>
                                         </ng-template>
 
-                                    </ngb-panel>
+                                    </ngb-panel> -->
 
                                     <ngb-panel id="today-order">
                                         <ng-template ngbPanelTitle>
