--- a/src/app/components/store/cart/cart.component.css
+++ b/src/app/components/store/cart/cart.component.css
@@ -478,6 +478,7 @@ button.btn.btn-checkout.enabledbutton {
     color: #1cb1c5;
     text-transform: uppercase;
     font-size: 16px;
+    display: none;
 }
 
 .share-chat a:hover {
