submit_checkout_implementation

--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -1232,7 +1232,7 @@
                                 </ngb-accordion>
                                 <div class="final-cta-bottom">
                                     <div class="plce-order-cta">
-                                        <button type="submit">Place My Order</button>
+                                        <button type="submit" (click)="onSubmit()">Place My Order</button>
                                     </div>
                                     <div class="verified-batch">
                                         <span class="batch-icon"><svg xmlns="http://www.w3.org/2000/svg" width="27"
