--- a/src/styles.css
+++ b/src/styles.css
@@ -552,6 +552,12 @@ section.client-reviews .client-testimonial-box .owl-nav {
     background: transparent;
     box-shadow: none !important;
     border-radius: 0 !important;
+    pointer-events: none;
+    padding-bottom: 10px;
+}
+
+.checkout-steps-3 ngb-accordion ngb-accordion .card-header+.collapse .card-body {
+    padding: 3px 20px 10px!important;
 }
 
 .panel-stepbar .card-header button,
@@ -1246,6 +1252,79 @@ div#checkoutstep1 .card-body,
 div#checkoutstep2 .card-body,
 div#checkoutstep3 .card-body {
     padding: 20px 10px;
+}
+
+span.ques-ico {
+    position: absolute;
+    right: 0;
+}
+
+span.ques-ico a {
+    width: 22px;
+    height: 22px;
+    background-color: #fff;
+    display: block;
+    border-radius: 50%;
+    padding: 10px;
+    position: relative;
+    border: 1px solid #1cb1c5;
+}
+
+span.ques-ico a i {
+    font-size: 11px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #1cb1c5;
+}
+
+.product-details h3 {
+    position: relative;
+}
+
+
+/* Tooltip Quickshop */
+
+.tooltipcontent {
+    position: absolute;
+    background: #fff;
+    padding: 20px;
+    z-index: 1;
+    top: -144px;
+    max-width: calc(100% - 0px);
+    box-shadow: 0px 0px 9px #bdbdbd;
+}
+
+.custom-shiping {
+    position: relative;
+}
+
+.tooltipcontent a.btnclose {
+    display: block;
+    max-width: 80px;
+    text-transform: uppercase;
+    color: #1cb1c5;
+    font-size: 15px;
+    margin: 10px 0 0 0;
+    float: right;
+    cursor: pointer;
+}
+
+.tooltipcontent a.btnclose:hover {
+    text-decoration: none;
+}
+
+.tooltipcontent p {
+    margin: 0;
+}
+
+.tooltipcontent.hide {
+    display: none;
+}
+
+.tooltipcontent.show {
+    display: block;
 }
 
 
