--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -69,9 +69,13 @@
               </div>
             </div>
             <div class="form-group mb-3">
-              <input type="text" placeholder="Birthday" class="form-control" readonly="readonly"
+              <input type="text" placeholder="Birthday" class="form-control" readonly="readonly" [ngClass]="{ 'is-invalid': submitted && f.dateOfBirth.errors }" 
               bsDatepicker [maxDate]="maxDate" [bsConfig]="{ isAnimated: true, adaptivePosition: true, selectFromOtherMonth: true  }" formControlName="dateOfBirth">
               <span class="valid-text">* Required</span>
+              <div *ngIf="submitted && f.dateOfBirth.errors" class="invalid-feedback">
+                <div *ngIf="f.dateOfBirth.errors.required">Birthday is required</div>
+
+              </div>
             </div>
           </div>
           <div class="btn-proceed">
