--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -77,6 +77,15 @@
 
               </div>
             </div>
+<div class="form-group mb-3">
+
+  <re-captcha id="recaptcha" name="recaptcha" required [ngClass]="{ 'is-invalid': submitted && f.recaptcha.errors }" formControlName="recaptcha"></re-captcha>
+  <span class="valid-text">* Required</span>
+  <div *ngIf="submitted && f.recaptcha.errors" class="invalid-feedback">
+    <div *ngIf="f.recaptcha.errors.required">Recaptcha is required</div>
+
+  </div>
+</div>
           </div>
           <div class="btn-proceed">
             <p class="short-noti-signup">We will never sell or share your personal information.</p>
@@ -85,6 +94,7 @@
             <a [routerLink]="['/sign-in']">SIGN IN</a>
           </div>
         </form>
+     
       </div>
     </div>
   </div>
