--- a/src/app/components/store/cart/cart.component.html
+++ b/src/app/components/store/cart/cart.component.html
@@ -246,48 +246,49 @@
                                 </div>
                             </div>
                         </div>
+    <!-- discount section -->
+
+
+    <div class="other-additional-product">
+      <div class="promo-code">
+          <div [className]="  delivery.inputdata ? 'special-field datafilled form-group ' : 'special-field dataempty form-group' ">
+              <input type="text" [(ngModel)]="delivery.inputdata" class="form-control" value="{{delivery.inputdata| date}}" bsDatepicker [minDate]="minDate" [bsConfig]="{
+  isAnimated: true,
+  adaptivePosition: true,
+  selectFromOtherMonth: true
+}" />
+              <label class="form-label">Select Start Date</label>
+              <span class="btn-add-promo">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24"
+  height="24" viewBox="0 0 24 24">
+  <defs>
+    <clipPath id="clip-path">
+      <rect width="24" height="24" fill="none" />
+    </clipPath>
+  </defs>
+  <g id="Icon_Event_Rounded" data-name="Icon / Event / Rounded" opacity="0.5"
+    clip-path="url(#clip-path)">
+    <rect id="Box" width="24" height="24" fill="none" />
+    <path id="Path_2017" data-name="Path 2017"
+      d="M879.9,18h-12a1.075,1.075,0,0,1-1-1V7h14V17A1,1,0,0,1,879.9,18Zm-2-17V2h-8V1a1,1,0,0,0-2,0V2h-1a2.006,2.006,0,0,0-2,2V18a2.006,2.006,0,0,0,2,2h14a2.006,2.006,0,0,0,2-2V4a2.006,2.006,0,0,0-2-2h-1V1a1,1,0,0,0-2,0Zm0,10h-3a1.075,1.075,0,0,0-1,1v3a1.075,1.075,0,0,0,1,1h3a1.075,1.075,0,0,0,1-1V12A1,1,0,0,0,877.9,11Z"
+      transform="translate(-862 2)" />
+  </g>
+</svg>
+</span>
+          </div>
+          <div class="subscription-with-discount">
+              <p>15% Discount</p>
+              <p>-${{discount15Percent | number:'.1-2' }}</p>
+          </div>
+          <div class="subtotal">
+              <p>Subtotal</p>
+              <p>${{ subTotalSubscriptionPriceAfterDiscount | number:'.1-2' }}</p>
+          </div>
+      </div>
+  </div>
                     </div>
 
-                    <!-- discount section -->
-
-
-                    <div class="other-additional-product">
-                        <div class="promo-code">
-                            <div [className]="  inputdata ? 'special-field datafilled form-group ' : 'special-field dataempty form-group' ">
-                                <input type="text" [(ngModel)]="inputdata" class="form-control" bsDatepicker [minDate]="minDate" [bsConfig]="{
-                    isAnimated: true,
-                    adaptivePosition: true,
-                    selectFromOtherMonth: true
-                  }" />
-                                <label class="form-label">Select Start Date</label>
-                                <span class="btn-add-promo">
-                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24"
-                    height="24" viewBox="0 0 24 24">
-                    <defs>
-                      <clipPath id="clip-path">
-                        <rect width="24" height="24" fill="none" />
-                      </clipPath>
-                    </defs>
-                    <g id="Icon_Event_Rounded" data-name="Icon / Event / Rounded" opacity="0.5"
-                      clip-path="url(#clip-path)">
-                      <rect id="Box" width="24" height="24" fill="none" />
-                      <path id="Path_2017" data-name="Path 2017"
-                        d="M879.9,18h-12a1.075,1.075,0,0,1-1-1V7h14V17A1,1,0,0,1,879.9,18Zm-2-17V2h-8V1a1,1,0,0,0-2,0V2h-1a2.006,2.006,0,0,0-2,2V18a2.006,2.006,0,0,0,2,2h14a2.006,2.006,0,0,0,2-2V4a2.006,2.006,0,0,0-2-2h-1V1a1,1,0,0,0-2,0Zm0,10h-3a1.075,1.075,0,0,0-1,1v3a1.075,1.075,0,0,0,1,1h3a1.075,1.075,0,0,0,1-1V12A1,1,0,0,0,877.9,11Z"
-                        transform="translate(-862 2)" />
-                    </g>
-                  </svg>
-                </span>
-                            </div>
-                            <div class="subscription-with-discount">
-                                <p>15% Discount</p>
-                                <p>-${{discount15Percent | number:'.1-2' }}</p>
-                            </div>
-                            <div class="subtotal">
-                                <p>Subtotal</p>
-                                <p>${{ subTotalSubscriptionPriceAfterDiscount | number:'.1-2' }}</p>
-                            </div>
-                        </div>
-                    </div>
+                
                 </div>
             </div>
             <div class="col-md-12 col-lg-5 desk-setting">
