--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -59,26 +59,28 @@
             <div class="collapse navbar-collapse m" id="main-menu" *ngIf="isMobileMenu" [className]="toggleDisplayDivIf ?  'showmenu' : 'hidemenu'">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']">Shop</a>
+                        <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']" (click)="isMobileMenu=false;">Shop</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://blog.winknaturals.com/">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="['active']">About</a>
+                        <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="['active']" (click)="isMobileMenu=false;">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/enrollment']" [routerLinkActive]="['active']">Join</a>
+                        <a class="nav-link" [routerLink]="['/enrollment']" [routerLinkActive]="['active']" (click)="isMobileMenu=false;">Join</a>
                     </li>
-                    <li class="nav-item" *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links nav-link">SIGN IN</a></li>
-                    <li class="nav-item" *ngIf="user"><a (click)="logout()" class="log-links nav-link">Log out</a></li>
+                    <li class="nav-item" *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links nav-link" (click)="isMobileMenu=false;">SIGN IN</a></li>
+                    <li class="nav-item" *ngIf="user"><a (click)="logout()" class="log-links nav-link" (click)="isMobileMenu= false;">Log out</a></li>
 
                 </ul>
                 <div class="logo-center">
                     <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img src="../../assets/logo-wink.png" /></a>
                 </div>
-            </div>
+            </div> 
 
+
+          
             <!-- <div class="searchOptionsbox" *ngIf="isSearchshow">
         <div class="close-ico">
           <a (click)="closeSearchbar()">
