Guided Tour changes

--- a/src/app/components/store/search_product/searchproduct/searchproduct.component.html
+++ b/src/app/components/store/search_product/searchproduct/searchproduct.component.html
@@ -26,7 +26,7 @@
       <ng-template #thenBlock>
         <h3>No Products Found</h3>
       </ng-template>
-      <ng-template #elseBlock>       
+      <ng-template #elseBlock>
       <div class="col-md-3 prod-list-item" *ngFor="let product of shopProductModels">
         <div class="card">
           <img [src]="product.image_03" class="card-img-top" alt="products-sample" />
@@ -35,14 +35,19 @@
               <h5 class="card-title">{{ product.itemDescription }}</h5>
               <h6 class="small">Perfect for ages 3+</h6>
               <div class="reviews-product">
-                <ul>
+
+                <div [attr.data-product-id]="product.itemID" class="yotpo bottomLine">
+                </div>
+                <yotpo-star-rating productId="718" style="display: none;">
+                </yotpo-star-rating>
+                <!-- <ul>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                 </ul>
-                <p>704 REVIEWS</p>
+                <p>704 REVIEWS</p> -->
               </div>
               <div class="prod-price">
                 <span class="price-value">${{product.price}}</span>
@@ -109,14 +114,18 @@
             <div class="product-details">
               <h5 class="card-title">{{ product?.itemDescription }}</h5>
               <div class="reviews-product">
-                <ul>
+                <div [attr.data-product-id]="product.itemID" class="yotpo bottomLine">
+                </div>
+                <yotpo-star-rating productId="718" style="display: none;">
+                </yotpo-star-rating>
+                <!-- <ul>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                   <li><i class="fas fa-star"></i></li>
                 </ul>
-                <p>704 REVIEWS</p>
+                <p>704 REVIEWS</p> -->
               </div>
               <h6 class="small">Perfect for ages 3+</h6>
               <div class="product-info">
@@ -142,7 +151,7 @@
                     <label class="form-check-label" for="{{bundle.id}}"
                       >{{bundle.name}}</label
                     >
-                  </div>               
+                  </div>
                 </div> -->
 
                   <div class="radio-bundle">
@@ -159,7 +168,7 @@
                     <label class="form-check-label" for="1"
                       >Single</label
                     >
-                  </div>               
+                  </div>
                 </div>
                 <div class="radio-bundle">
                   <div class="form-check form-check-inline">
@@ -174,7 +183,7 @@
                     <label class="form-check-label" for="2"
                       >2-pk (Save 5%)</label
                     >
-                  </div>               
+                  </div>
                 </div>
               </div>
               <div class="prod-bundle-select mt-0 delivery-radio">
@@ -187,11 +196,11 @@
                       name="inlineRadioOptionsdelivery"
                       id="{{i}}{{type}}"
                       value="{{type}}"
-                      (change)="checkDelivery(type)"                      
+                      (change)="checkDelivery(type)"
                     />
                     <label class="form-check-label" for="{{i}}{{type}}"
                       >{{type == 0 ? 'Single Delivery' : 'Subscribe & Save 15%'}}</label>
-                  </div>                 
+                  </div>
                 </div> -->
 
                 <div class="radio-bundle">
@@ -202,12 +211,12 @@
                       name="inlineRadioOptionsdelivery"
                       id="3"
                       value="0"
-                      (change)="checkDelivery(0)"    
-                      checked                  
+                      (change)="checkDelivery(0)"
+                      checked
                     />
                     <label class="form-check-label" for="3"
                       >Single Delivery</label>
-                  </div>                 
+                  </div>
                 </div>
 
                 <div class="radio-bundle">
@@ -218,11 +227,11 @@
                       name="inlineRadioOptionsdelivery"
                       id="4"
                       value="1"
-                      (change)="checkDelivery(1)"                      
+                      (change)="checkDelivery(1)"
                     />
                     <label class="form-check-label" for="4"
                       >Subscribe & Save 15%</label>
-                  </div>                 
+                  </div>
                 </div>
 
               </div>
@@ -236,7 +245,7 @@
                       {{qty.value}}
                        </option>
                     </select>
-                   
+
                     <!-- <select  [ngModel]="quantityValue" class="form-control">
                       <option class="dropdown-item" disabled selected value="undefined">Select Quantity</option>
                       <option *ngFor="let tech of quantity" [ngValue]="tech">
@@ -259,7 +268,7 @@
                   <div *ngIf="showSubscription" class="form-group">
                     <select (change)="getYearValue($event.target.value)" class="form-control">
                       <!-- <option class="dropdown-item" disabled value="undefined">Select</option>     -->
-                      <option [value]="undefined"  selected="true">Select</option>                 
+                      <option [value]="undefined"  selected="true">Select</option>
                       <option *ngFor="let year of years" [value]="year.value">
                       {{year.name}}
                        </option>
