--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -14,21 +14,22 @@
                     <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
                 *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
 
+
                 </ul>
             </div>
-
+            <span (click)="RestartTour()" class="start-demo-tour"></span>
             <div class="collapse navbar-collapse d" *ngIf="isDesktopMenu" id="main-menu">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item Shop-demo-tour">
                         <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']">Shop</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item Blog-demo-tour">
                         <a class="nav-link" href="https://blog.winknaturals.com/" target=_blank [routerLinkActive]="['active']">Blog</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item About-demo-tour">
                         <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="['active']">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item Join-demo-tour">
                         <a class="nav-link" [routerLink]="['/enrollment']" [routerLinkActive]="['active']">Join</a>
                     </li>
                     <!-- <li class="nav-item dropdown">
@@ -47,13 +48,13 @@
                     <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img src="../../assets/logo-wink.png" /></a>
                 </div>
                 <ul class="right-menu">
-                    <li>
+                    <li class="Search-demo-tour-class">
                         <a [routerLink]="['/store/search-products']"><i class="fa fa-search"></i></a>
                     </li>
-                    <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
+                    <li class="cart-item Cart-Item-demo-tour-class"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
                 *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
-                    <li *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links">SIGN IN</a></li>
-                    <li *ngIf="user"><a (click)="logout()" class="log-links">Log out</a></li>
+                    <li class="Login-demo-tour-class" *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links">SIGN IN</a></li>
+                    <li class="LogOut-demo-tour-class" *ngIf="user"><a (click)="logout()" class="log-links">Log out</a></li>
                 </ul>
             </div>
             <div class="collapse navbar-collapse m" id="main-menu" *ngIf="isMobileMenu" [className]="toggleDisplayDivIf ?  'showmenu' : 'hidemenu'">
@@ -90,9 +91,9 @@
             <path id="Path_2016" data-name="Path 2016"
               d="M111.8,3.3a.967.967,0,0,0-1.4,0l-4.9,4.9-4.9-4.9a.99.99,0,0,0-1.4,1.4l4.9,4.9-4.9,4.9a.99.99,0,0,0,1.4,1.4l4.9-4.9,4.9,4.9a.99.99,0,1,0,1.4-1.4l-4.9-4.9,4.9-4.9A.967.967,0,0,0,111.8,3.3Z"
               transform="translate(-94 2)" fill="#000" />
-          </svg> 
+          </svg>
           </a>
-         
+
         </div>
         <div class="searchOption-inner">
           <input class="form-control" type="text" [(ngModel)]="searchText" name="search" placeholder="Search Product" />
@@ -104,3 +105,4 @@
         </div>
     </nav>
 </header>
+<ngx-guided-tour></ngx-guided-tour>
